--- a/_includes/author_bio.html
+++ b/_includes/author_bio.html
@@ -6,9 +6,11 @@
   I am a Computer Engineering graduate with a sweet spot for scalable and robust 
   applications, as well as cutting-edge and reliable technologies.</p>
 
-<p>As a Software Engineer, I am proficient in different programming paradigms and languages, using the most appropriate tools in designing and building software applications that work well under high load, so your users will always be happy using a functional application.</p>
+<p>As a Software Engineer, I am proficient in different programming paradigms and languages, using the most appropriate
+  tools in designing and building software applications that work well under high load, so your users will always
+  be happy using a working product.</p>
 
-<p>Some of the tools I use on a daily basis are:</p>
+<p>Some of the tools I use to make customers happy are:</p>
 
 <ul>
   <li><strong>Back-end technologies</strong>: Ruby, Rails, Elixir, Node.js</li>
@@ -17,4 +19,4 @@
   <li><strong>Misc</strong>: Docker, Chef, Jira, Heroky, AWS</li>
 </ul>
   
-<p>If my skills meet your needs, feel free to contact me.</p>
+<p>If my skills meet your needs, feel free to <a href="/contact">contact me</a>.</p>
