--- a/_includes/author_bio.html
+++ b/_includes/author_bio.html
@@ -13,10 +13,10 @@
 <p>Some of the tools I use to make customers happy are:</p>
 
 <ul>
-  <li><strong>Back-end technologies</strong>: Ruby, Rails, Elixir, Node.js</li>
+  <li><strong>Back-end technologies</strong>: Ruby, Rails, Elixir, Phoenix, Node.js</li>
   <li><strong>Front-end technologies</strong>: JavaScript, ReactJS, VueJS, SASS</li>
   <li><strong>Databases</strong>: PostgreSQL, MongoDB, MySQL, Redis</li>
-  <li><strong>Misc</strong>: Docker, Chef, Jira, Heroky, AWS</li>
+  <li><strong>Misc</strong>: Docker, Chef, Jira, Heroku, AWS</li>
 </ul>
   
 <p>If my skills meet your needs, feel free to <a href="/contact">contact me</a>.</p>
