--- a/_includes/author_bio.html
+++ b/_includes/author_bio.html
@@ -1,8 +1,5 @@
 <p>
-  <a href="https://www.youtube.com/watch?v=rEq1Z0bjdwc">
-    Hello there
-  </a>
-  , random visitor of my weblog. You may call me Aldo (or Al, if you don't have the time). 
+  <a href="https://www.youtube.com/watch?v=rEq1Z0bjdwc">Hello there</a>, random visitor of my weblog. You may call me Aldo (or Al, if you don't have the time). 
   I am a Computer Engineering graduate with a sweet spot for scalable and robust 
   applications, as well as cutting-edge and reliable technologies.</p>
 
